prd_parser.py
import anytree
from code_generator import CodeGeneration


class Parser:

    def __init__(self, scr):
        self.lookahead_type = None
        self.lookahead_lexeme = None
        self.scanner = scr
        self.parse_tree = None
        self.errors = ''
        self.code_generator = CodeGeneration()

    def parse(self):
        self.next()
        self.program()

    def next(self):
        if self.lookahead_lexeme == '$':
            self.lookahead_lexeme, self.lookahead_type = None, None
        else:
            self.lookahead_type, self.lookahead_lexeme = self.scanner.get_next_token()
            while self.lookahead_type is None:
                self.lookahead_type, self.lookahead_lexeme = self.scanner.get_next_token()

    def match(self, parent, expected_token):
        if expected_token[0] == self.lookahead_type and ((expected_token[0] in ['ID', 'NUM']) or
                                                         (expected_token[0] in ['KEYWORD', 'SYMBOL'] and
                                                          self.lookahead_lexeme) in expected_token[1]):
            anytree.Node('(' + self.lookahead_type + ', ' + str(self.lookahead_lexeme) + ') ', parent=parent)
            self.next()
        elif self.lookahead_lexeme is not None:
            expected = ''
            if len(expected_token[1]) == 1:
                expected = expected_token[1][0]
            else:
                for i in range(len(expected_token[1]) - 1):
                    expected += expected_token[1][i] + ' or '
                expected += expected_token[1][-1]
            self.errors += '#{0} : syntax error, missing {1}\n'.format(self.scanner.line, expected)

    # program ->  declaration-list $
    def program(self):
        if self.lookahead_lexeme in ['int', 'void']:
            self.parse_tree = anytree.Node('Program', parent=None)
            self.declaration_list(self.parse_tree)
            if self.lookahead_lexeme == '$':
                anytree.Node('$', parent=self.parse_tree)
                self.code_generator.code_gen('#jp_main')
            elif self.lookahead_lexeme is not None:
                self.errors += '#{0} : syntax error, missing $'.format(self.scanner.line)
        elif self.lookahead_lexeme == '$':
            self.parse_tree = anytree.Node('Program', parent=None)
            node = anytree.Node('Declaration-list', parent=self.parse_tree)
            anytree.Node('epsilon', parent=node)
            anytree.Node('$', parent=self.parse_tree)
        elif self.lookahead_lexeme is not None:
            expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
            self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.program()

    # declaration-list -> declaration declaration-list | EPSILON
    def declaration_list(self, parent):
        if self.lookahead_lexeme in ['int', 'void']:
            node = anytree.Node('Declaration-list', parent=parent)
            self.declaration(node)
            self.declaration_list(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'break', 'if',
                                                                               'while', 'return', 'for', '+', '-', '$']:
            node = anytree.Node('Declaration-list', parent=parent)
            anytree.Node('epsilon', parent=node)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.declaration_list(parent)

    # declaration -> Declaration-initial Declaration-prime
    def declaration(self, parent):
        if self.lookahead_lexeme in ['int', 'void']:
            node = anytree.Node('Declaration', parent=parent)
            self.declaration_initial(node)
            self.declaration_prime(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'int', 'void',
                                                                               'break', 'if', 'while', 'return', 'for',
                                                                               '+', '-', '$']:
            self.errors += '#{0} : syntax error, missing declaration\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.declaration(parent)

    # declaration_initial ->  type-specifier ID
    def declaration_initial(self, parent):
        if self.lookahead_lexeme in ['int', 'void']:
            node = anytree.Node('Declaration-initial', parent=parent)
            self.code_generator.code_gen('#type', self.lookahead_lexeme)
            self.type_specifier(node)
            self.code_generator.code_gen('#define_id', self.lookahead_lexeme)
            self.match(node, ('ID', ['ID']))
        elif self.lookahead_lexeme in [';', '[', '(', ')', ',']:
            self.errors += '#{0} : syntax error, missing declaration-initial\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.declaration_initial(parent)

    # Declaration-prime -> Fun-declaration-prime | Var-declaration-prime
    def declaration_prime(self, parent):
        if self.lookahead_lexeme in [';', '[']:
            node = anytree.Node('Declaration-prime', parent=parent)
            self.var_declaration_prime(node)
        elif self.lookahead_lexeme == '(':
            self.code_generator.code_gen('#start_function')
            node = anytree.Node('Declaration-prime', parent=parent)
            self.fun_declaration_prime(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'int', 'void',
                                                                               'break', 'if', 'while', 'return', 'for',
                                                                               '+', '-', '$']:
            self.errors += '#{0} : syntax error, missing declaration-prime\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.declaration_prime(parent)

    # Fun-declaration-prime -> ( Params ) Compound-stmt
    def fun_declaration_prime(self, parent):
        if self.lookahead_lexeme == '(':
            node = anytree.Node('Fun-declaration-prime', parent=parent)
            self.match(node, ('SYMBOL', ['(']))
            self.params(node)
            self.code_generator.code_gen('#define_function')
            self.match(node, ('SYMBOL', [')']))
            self.compound_stmt(node)
            self.code_generator.code_gen('#end_function')
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'int', 'void',
                                                                               'break', 'if', 'while', 'return', 'for',
                                                                               '+', '-', '$']:
            self.errors += '#{0} : syntax error, missing fun-declaration-prime\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.fun_declaration_prime(parent)

    # Var-declaration-prime -> ; | [ NUM ] ;
    def var_declaration_prime(self, parent):
        if self.lookahead_lexeme == ';':
            self.code_generator.code_gen('#check_type', line_num=self.scanner.line)
            node = anytree.Node('Var-declaration-prime', parent=parent)
            self.code_generator.code_gen('#pop')
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_lexeme == '[':
            self.code_generator.code_gen('#check_type', line_num=self.scanner.line)
            node = anytree.Node('Var-declaration-prime', parent=parent)
            self.match(node, ('SYMBOL', ['[']))
            self.code_generator.code_gen('#pnum', self.lookahead_lexeme)
            self.match(node, ('NUM', 'NUM'))
            self.match(node, ('SYMBOL', [']']))
            self.code_generator.code_gen('#save_array')
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in ['(', '{', '}', 'int', 'void', 'break',
                                                                               'if', 'while', 'return', 'for', '+', '-',
                                                                               '$']:
            if self.lookahead_type == 'NUM':
                self.errors += '#{0} : syntax error, missing [\n'.format(self.scanner.line)
            else:
                self.errors += '#{0} : syntax error, missing ;\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.var_declaration_prime(parent)

    # Type-specifier -> int | void
    def type_specifier(self, parent):
        if self.lookahead_lexeme in ['int', 'void']:
            node = anytree.Node('Type-specifier', parent=parent)
            self.match(node, ('KEYWORD', ['int', 'void']))
        elif self.lookahead_type == 'ID':
            self.errors += '#{0} : syntax error, missing type-specifier\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.type_specifier(parent)

    # Params -> int ID Param-prime Param-list | void Param-list-void-abtar
    def params(self, parent):
        if self.lookahead_lexeme == 'int':
            node = anytree.Node('Params', parent=parent)
            self.code_generator.code_gen('#type', self.lookahead_lexeme)
            self.match(node, ('KEYWORD', ['int']))
            self.code_generator.code_gen('#define_id', self.lookahead_lexeme)
            self.match(node, ('ID', ['ID']))
            self.code_generator.code_gen('#add_param')
            self.param_prime(node)
            self.param_list(node)
        elif self.lookahead_lexeme == 'void':
            self.code_generator.code_gen('#type', self.lookahead_lexeme)
            node = anytree.Node('Params', parent=parent)
            self.match(node, ('KEYWORD', ['void']))
            self.param_list_void_abtar(node)
        elif self.lookahead_lexeme == ')':
            self.errors += '#{0} : syntax error, missing params\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.params(parent)

    # Param-list-void-abtar -> ID Param-prime Param-list | EPSILON
    def param_list_void_abtar(self, parent):
        if self.lookahead_type == 'ID':
            node = anytree.Node('Param-list-void-abtar', parent=parent)
            self.code_generator.code_gen('#define_id', self.lookahead_lexeme)
            self.match(node, ('ID', ['ID']))
            self.code_generator.code_gen('#add_param')
            self.code_generator.code_gen('#check_type', line_num=self.scanner.line)
            self.param_prime(node)
            self.param_list(node)
        elif self.lookahead_lexeme == ')':
            node = anytree.Node('Param-list-void-abtar', parent=parent)
            anytree.Node('epsilon', parent=node)
            self.code_generator.code_gen('#pop')
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.param_list_void_abtar(parent)

    # Param-list -> , Param Param-list | EPSILON
    def param_list(self, parent):
        if self.lookahead_lexeme == ',':
            node = anytree.Node('Param-list', parent=parent)
            self.match(node, ('SYMBOL', [',']))
            self.param(node)
            self.code_generator.code_gen('#add_param')
            self.param_list(node)
        elif self.lookahead_lexeme == ')':
            node = anytree.Node('Param-list', parent=parent)
            anytree.Node('epsilon', parent=node)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.param_list(parent)

    # Param -> Declaration-initial Param-prime
    def param(self, parent):
        if self.lookahead_lexeme in ['int', 'void']:
            node = anytree.Node('Param', parent=parent)
            self.declaration_initial(node)
            self.param_prime(node)
        elif self.lookahead_lexeme in {')', ','}:
            self.errors += '#{0} : syntax error, missing param\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.param(parent)

    # Param-prime -> [ ] | EPSILON
    def param_prime(self, parent):
        if self.lookahead_lexeme == '[':
            node = anytree.Node('Param-prime', parent=parent)
            self.match(node, ('SYMBOL', ['[']))
            self.match(node, ('SYMBOL', [']']))
            self.code_generator.code_gen('#array_input')
        elif self.lookahead_lexeme in [')', ',']:
            node = anytree.Node('Param-prime', parent=parent)
            anytree.Node('epsilon', parent=node)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.param_prime(parent)

    # Compound-stmt -> { Declaration-list Statement-list }
    def compound_stmt(self, parent):
        if self.lookahead_lexeme == '{':
            node = anytree.Node('Compound-stmt', parent=parent)
            self.match(node, ('SYMBOL', ['{']))
            self.declaration_list(node)
            self.statement_list(node)
            self.match(node, ('SYMBOL', ['}']))
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '}', 'int', 'void', 'break',
                                                                               'if', 'else', 'while', 'return', 'for',
                                                                               '+', '-', '$']:
            self.errors += '#{0} : syntax error, missing {\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.compound_stmt(parent)

    # Statement-list -> Statement Statement-list | EPSILON
    def statement_list(self, parent):
        if self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', 'break', 'if', 'while',
                                                                             'return', 'for', '+', '-']:
            node = anytree.Node('Statement-list', parent=parent)
            self.statement(node)
            self.statement_list(node)
        elif self.lookahead_lexeme == '}':
            node = anytree.Node('Statement-list', parent=parent)
            anytree.Node('epsilon', parent=node)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.statement_list(parent)

    # Statement -> Expression-stmt | Compound-stmt | Selection-stmt | Iteration-stmt | Return-stmt | For-stmt
    def statement(self, parent):
        if self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', 'break', '+', '-']:
            node = anytree.Node('Statement', parent=parent)
            self.expression_stmt(node)
        elif self.lookahead_lexeme == '{':
            node = anytree.Node('Statement', parent=parent)
            self.compound_stmt(node)
        elif self.lookahead_lexeme == 'if':
            node = anytree.Node('Statement', parent=parent)
            self.selection_stmt(node)
        elif self.lookahead_lexeme == 'while':
            node = anytree.Node('Statement', parent=parent)
            self.iteration_stmt(node)
        elif self.lookahead_lexeme == 'return':
            node = anytree.Node('Statement', parent=parent)
            self.return_stmt(node)
        elif self.lookahead_lexeme == 'for':
            node = anytree.Node('Statement', parent=parent)
            self.for_stmt(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in ['}', 'break', 'else', '+', '-']:
            self.errors += '#{0} : syntax error, missing statement\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.statement(parent)

    # Expression-stmt -> Expression ; | break ; | ;
    def expression_stmt(self, parent):
        if self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in ['(', '+', '-']:
            node = anytree.Node('Expression-stmt', parent=parent)
            self.expression(node)
            self.match(node, ('SYMBOL', [';']))
            self.code_generator.code_gen('#pop')
        elif self.lookahead_lexeme == 'break':
            node = anytree.Node('Expression-stmt', parent=parent)
            self.match(node, ('KEYWORD', ['break']))
            self.code_generator.code_gen('#break', line_num=self.scanner.line)
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_lexeme == ';':
            node = anytree.Node('Expression-stmt', parent=parent)
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_lexeme in ['{', '}', 'else', 'if', 'while', 'return', 'for']:
            self.errors += '#{0} : syntax error, missing expression-stmt\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.expression_stmt(parent)

    # Selection-stmt -> if ( Expression ) Statement else Statement
    def selection_stmt(self, parent):
        if self.lookahead_lexeme == 'if':
            node = anytree.Node('Selection-stmt', parent=parent)
            self.match(node, ('KEYWORD', ['if']))
            self.match(node, ('SYMBOL', ['(']))
            self.expression(node)
            self.match(node, ('SYMBOL', [')']))
            self.code_generator.code_gen('#save')
            self.statement(node)
            self.match(node, ('KEYWORD', ['else']))
            self.code_generator.code_gen('#jpf')
            self.statement(node)
            self.code_generator.code_gen('#jp')
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'break', 'else',
                                                                               'while', 'return', 'for', '+', '-']:
            self.errors += '#{0} : syntax error, missing selection-stmt\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.selection_stmt(parent)

    # Iteration-stmt -> while ( Expression ) Statement
    def iteration_stmt(self, parent):
        if self.lookahead_lexeme == 'while':
            node = anytree.Node('Iteration-stmt', parent=parent)
            self.code_generator.code_gen('#loop')
            self.match(node, ('KEYWORD', ['while']))
            self.match(node, ('SYMBOL', ['(']))
            self.code_generator.code_gen('#label')
            self.expression(node)
            self.match(node, ('SYMBOL', [')']))
            self.code_generator.code_gen('#save')
            self.statement(node)
            self.code_generator.code_gen('#while_stmt')
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'break', 'else',
                                                                               'if', 'return', 'for', '+', '-']:
            self.errors += '#{0} : syntax error, missing iteration-stmt\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.iteration_stmt(parent)

    # Return-stmt -> return Return-stmt-prime
    def return_stmt(self, parent):
        if self.lookahead_lexeme == 'return':
            node = anytree.Node('Return-stmt', parent=parent)
            self.match(node, ('KEYWORD', ['return']))
            self.return_stmt_prime(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'break', 'else',
                                                                               'if', 'while', 'for', '+', '-']:
            self.errors += '#{0} : syntax error, missing return-stmt\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.return_stmt(parent)

    # Return-stmt-prime -> ; | Expression ;
    def return_stmt_prime(self, parent):
        if self.lookahead_lexeme == ';':
            node = anytree.Node('Return-stmt-prime', parent=parent)
            self.code_generator.code_gen('#return')
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in ['(', '+', '-']:
            node = anytree.Node('Return-stmt-prime', parent=parent)
            self.expression(node)
            self.code_generator.code_gen('#return_value')
            self.match(node, ('SYMBOL', [';']))
        elif self.lookahead_lexeme in ['{', '}', 'break', 'else', 'if', 'while', 'return', 'for']:
            self.errors += '#{0} : syntax error, missing return-stmt-prime\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.return_stmt_prime(parent)

    # For-stmt -> for ID = Vars Statement
    def for_stmt(self, parent):
        if self.lookahead_lexeme == 'for':
            node = anytree.Node('For-stmt', parent=parent)
            self.code_generator.code_gen('#loop')
            self.match(node, ('KEYWORD', ['for']))
            self.code_generator.code_gen('#loop_size')
            self.code_generator.code_gen('#pid', self.lookahead_lexeme, self.scanner.line)
            self.code_generator.code_gen('#push_zero')
            self.match(node, ('ID', ['ID']))
            self.match(node, ('SYMBOL', ['=']))
            self.vars(node)
            # self.code_generator.code_gen('#label')
            self.code_generator.code_gen('#assign_for')
            self.code_generator.code_gen('#initial')
            self.code_generator.code_gen('#save')
            self.code_generator.code_gen('#step')
            self.statement(node)
            self.code_generator.code_gen('#for_stmt')
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', '}', 'break', 'else',
                                                                               'if', 'while', 'return', '+', '-']:
            self.errors += '#{0} : syntax error, missing for-stmt\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.for_stmt(parent)

    # Vars -> Var Var-zegond
    def vars(self, parent):
        if self.lookahead_type == 'ID':
            node = anytree.Node('Vars', parent=parent)
            self.var(node)
            self.code_generator.code_gen('#count')
            self.var_zegond(node)
        elif self.lookahead_type == 'NUM' or self.lookahead_lexeme in [';', '(', '{', 'break', 'if', 'while', 'return',
                                                                       'for', '+', '-']:
            self.errors += '#{0} : syntax error, missing vars\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.vars(parent)

    # Var-zegond -> , Var Var-zegond | EPSILON
    def var_zegond(self, parent):
        if self.lookahead_lexeme == ',':
            node = anytree.Node('Var-zegond', parent=parent)
            self.match(node, ('SYMBOL', [',']))
            self.var(node)
            self.code_generator.code_gen('#count')
            self.var_zegond(node)
        elif self.lookahead_type in ['ID', 'NUM'] or self.lookahead_lexeme in [';', '(', '{', 'break', 'if', 'while',
                                                                               'return', 'for', '+', '-']:
            node = anytree.Node('Var-zegond', parent=parent)
            anytree.Node('epsilon', parent=node)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.var_zegond(parent)

    # Var -> ID Var-prime
    def var(self, parent):
        if self.lookahead_type == 'ID':
            node = anytree.Node('Var', parent=parent)
            self.code_generator.code_gen('#pid', self.lookahead_lexeme, self.scanner.line)
            self.match(node, ('ID', ['ID']))
            self.var_prime(node)
        elif self.lookahead_type == 'NUM' or self.lookahead_lexeme in [';', '(', '{', ',', 'break', 'if', 'while',
                                                                       'return', 'for', '+', '-']:
            self.errors += '#{0} : syntax error, missing var\n'.format(self.scanner.line)
        elif self.lookahead_lexeme is not None:
            if self.lookahead_lexeme == '$':
                self.errors += '#{0} : syntax error, unexpected EOF\n'.format(self.scanner.line)
            else:
                expected = self.lookahead_type if self.lookahead_type in ['ID', 'NUM'] else self.lookahead_lexeme
                self.errors += '#{0} : syntax error, illegal {1}\n'.format(self.scanner.line, expected)
            self.next()
            self.var(parent)
